Ajustes URL relatório

--- a/src/main/webapp/administrador/menuAdministrador.xhtml
+++ b/src/main/webapp/administrador/menuAdministrador.xhtml
@@ -113,8 +113,7 @@
 			<div id="status" style="...">
 				<div id="ico">
 					<h1>
-						<h:graphicImage library="imagens/menu" name="xx.png"
-										width="25px" height="25px" />
+						<h:graphicImage library="imagens" name="SLG.ico" width="25" height="25" />
 						<h5>
 							<b>Menu</b>
 						</h5>
