--- a/src/main/webapp/dirigente/montagemCirculoEstudo.xhtml
+++ b/src/main/webapp/dirigente/montagemCirculoEstudo.xhtml
@@ -158,7 +158,7 @@
 		</p:toolbar>
 				<p:dataTable id="circulosEstudoEcc" value="#{circuloEstudoEccBean.listaUltimoCirculoEstudo}" var="circuloEstudoEcc" rowIndexVar="index" selection="#{circuloEstudoEccBean.circuloEstudoEcc}"
 							 selectionMode="single" rowKey="#{circuloEstudoEcc.id}"
-							 emptyMessage="Não há Círculos de Estudos cadastrados" style="width:1120px;"
+							 emptyMessage="Não há Círculos de Estudos cadastrados" style="width:100%;"
 							 paginator="false" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 							 rowsPerPageTemplate="14,28,42,56,70" paginatorPosition="top"
 							 currentPageReportTemplate="Registro(s) {startRecord} a {endRecord} de um total de {totalRecords} - Página {currentPage} de {totalPages}">
