--- a/src/main/webapp/dirigente/montagemEncontrista.xhtml
+++ b/src/main/webapp/dirigente/montagemEncontrista.xhtml
@@ -159,7 +159,7 @@
 		</p:toolbar>
 				<p:dataTable id="encontristasEcc" value="#{encontristaEccBean.listaUltimoEncontristaEcc}" var="encontristaEcc" rowIndexVar="index" selection="#{encontristaEccBean.encontristaEcc}"
 							 selectionMode="single" rowKey="#{encontristaEcc.id}"
-							 emptyMessage="Não há Encontristas cadastrados" style="width:1120px;"
+							 emptyMessage="Não há Encontristas cadastrados" style="width:100%;"
 							 rows="14" paginator="false" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 							 rowsPerPageTemplate="14,28,42,56,70" paginatorPosition="top"
 							 currentPageReportTemplate="Registro(s) {startRecord} a {endRecord} de um total de {totalRecords} - Página {currentPage} de {totalPages}">
