--- a/src/main/webapp/dirigente/montagemFicha.xhtml
+++ b/src/main/webapp/dirigente/montagemFicha.xhtml
@@ -475,21 +475,21 @@
 
 					</h:panelGrid>
 					<h:panelGrid columns="4">
-						<h:outputLabel value="ECC - 1º Etapa" for="etapa1" />
-						<h:outputLabel value="ECC - 2º Etapa" for="etapa2" rendered="true"/>
-						<h:outputLabel value="ECC - 3º Etapa" for="etapa3" rendered="true"/>
+						<h:outputLabel value="1º Etapa" for="etapa1" />
+						<h:outputLabel value="2º Etapa" for="etapa2" rendered="true"/>
+						<h:outputLabel value="3º Etapa" for="etapa3" rendered="true"/>
 						<h:outputLabel value="Observação/Motivo" for="observacaoMotivo" />
 						<p:inputText id="etapa1" value="#{fichaBean.ficha.primeiraEtapa}" disabled="false"
-									 maxlength="10" style="width:75px;">
+									 maxlength="10" style="width:40px;">
 						</p:inputText>
 						<p:inputText id="etapa2" value="#{fichaBean.ficha.segundaEtapa}" rendered="true"
-									 maxlength="10" style="width:75px;">
+									 maxlength="10" style="width:40px;">
 						</p:inputText>
 						<p:inputText id="etapa3" value="#{fichaBean.ficha.terceiraEtapa}" rendered="true"
-									 maxlength="10" style="width:75px;">
+									 maxlength="10" style="width:40px;">
 						</p:inputText>
 						<p:inputText id="observacaoMotivo" value="#{fichaBean.ficha.motivo}"
-									 maxlength="200" style="width:526px;" disabled="false">
+									 maxlength="200" style="width:689px;" disabled="false">
 						</p:inputText>
 
 					</h:panelGrid>
@@ -777,21 +777,21 @@
 
 					</h:panelGrid>
 					<h:panelGrid columns="4">
-						<h:outputLabel value="ECC - 1º Etapa" for="etapa1" />
-						<h:outputLabel value="ECC - 2º Etapa" for="etapa2" rendered="true"/>
-						<h:outputLabel value="ECC - 3º Etapa" for="etapa3" rendered="true"/>
+						<h:outputLabel value="1º Etapa" for="etapa1" />
+						<h:outputLabel value="2º Etapa" for="etapa2" rendered="true"/>
+						<h:outputLabel value="3º Etapa" for="etapa3" rendered="true"/>
 						<h:outputLabel value="Observação/Motivo" for="observacaoMotivo" />
 						<p:inputText id="etapa1" value="#{fichaBean.ficha.primeiraEtapa}" disabled="false"
-									 maxlength="10" style="width:75px;">
+									 maxlength="10" style="width:40px;">
 						</p:inputText>
 						<p:inputText id="etapa2" value="#{fichaBean.ficha.segundaEtapa}" rendered="true"
-									 maxlength="10" style="width:75px;">
+									 maxlength="10" style="width:40px;">
 						</p:inputText>
 						<p:inputText id="etapa3" value="#{fichaBean.ficha.terceiraEtapa}" rendered="true"
-									 maxlength="10" style="width:75px;">
+									 maxlength="10" style="width:40px;">
 						</p:inputText>
 						<p:inputText id="observacaoMotivo" value="#{fichaBean.ficha.motivo}"
-									 maxlength="200" style="width:526px;" disabled="false">
+									 maxlength="200" style="width:760px;" disabled="false">
 						</p:inputText>
 					</h:panelGrid>
 					<h:panelGrid columns="2">
