--- a/src/main/webapp/dirigente/montagemEquipe.xhtml
+++ b/src/main/webapp/dirigente/montagemEquipe.xhtml
@@ -159,7 +159,7 @@
 		</p:toolbar>
 				<p:dataTable id="equipesEcc" value="#{equipeEccBean.listaUltimaEquipeEcc}" var="equipeEcc" rowIndexVar="index" selection="#{equipeEccBean.equipeEcc}"
 							 selectionMode="single" rowKey="#{equipeEcc.id}"
-							 emptyMessage="Não há Equipes cadastradas" style="width:1120px;"
+							 emptyMessage="Não há Equipes cadastradas" style="width:100%;"
 							 paginator="false" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 							 rowsPerPageTemplate="14,28,42,56,70" paginatorPosition="top"
 							 currentPageReportTemplate="Registro(s) {startRecord} a {endRecord} de um total de {totalRecords} - Página {currentPage} de {totalPages}">
