Implementado o Cadastro dos Dirigentes Nacionais

--- a/src/main/webapp/dirigente/menuDirigente.xhtml
+++ b/src/main/webapp/dirigente/menuDirigente.xhtml
@@ -78,6 +78,12 @@
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemCirculosEstudos.png" /><a
 								href="../dirigente/montagemCirculoEstudo.xhtml">Círculos de Estudo</a></li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="dirigenteNacional.png" /> <a
+								href="../dirigente/montagemDirigenteNacional.xhtml">Dirigente Nacional</a></li>
+
 					</ul>
 				</li>
 			</ul>
