--- a/src/main/webapp/dirigente/montagemCirculoEstudo.xhtml
+++ b/src/main/webapp/dirigente/montagemCirculoEstudo.xhtml
@@ -105,6 +105,11 @@
 							<a style="color: #808080; background: #a0c0de; opacity: 1;
 							filter: alpha(opacity = 100); border-bottom: 3px solid #b1b1b1;">Círculos de Estudos</a>
 						</li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="dirigenteNacional.png" /> <a
+								href="../dirigente/montagemDirigenteNacional.xhtml">Dirigente Nacional</a></li>
 					</ul>
 				</li>
 			</ul>
